# whichllm

./: .gitignore  Cargo.toml  LICENSE  README.md
docs/superpowers/plans/: 2026-06-26-whichllm-rust-b-expansion.md  2026-06-26-whichllm-rust-minimal.md
docs/superpowers/specs/: 2026-06-26-whichllm-rust-b-expansion.md  2026-06-26-whichllm-rust-design.md
src/: cli.rs  main.rs
src/benchmarks/: mod.rs  static_data.json  static_rs.rs  types.rs
src/engine/: mod.rs  scoring.rs  speed.rs  types.rs  vram.rs
src/hardware/: amd.rs  apple.rs  cpu.rs  intel.rs  memory.rs  mod.rs  nvidia.rs  types.rs
src/models/: cache.rs  gguf.rs  hf_api.rs  mod.rs  types.rs
src/output/: mod.rs
