[package]
name = "whichllm"
version = "0.2.0"
edition = "2024"
description = "Find the best local LLM that runs on your hardware"
license = "MIT"
repository = "https://github.com/Andyyyy64/whichllm"
keywords = ["llm", "gpu", "vram", "huggingface", "benchmark"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
owo-colors = "4"
dirs = "6"
chrono = { version = "0.4", features = ["serde"] }
